build: Use argLine property